# kangarootwelve

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: rust.yml  test_ci.yml
benches/: kangarootwelve.rs
examples/: k12.rs  kt128.rs  kt256.rs
src/: kangarootwelve.rs  kt128.rs  kt256.rs  lib.rs  tests.rs  utils.rs
