[package]
name = "kangarootwelve"
version = "0.1.0"
edition = "2021"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "BlaKE12: Blazing-fast KEccak on 12 rounds"
documentation = "https://github.com/itzmeanjan/kangarootwelve"
readme = "README.md"
repository = "https://github.com/itzmeanjan/kangarootwelve.git"
license = "MIT"
keywords = ["keccak", "xof", "turboshake", "kangarootwelve", "k12"]
categories = ["cryptography"]

[dependencies]
turboshake = { version = "=0.1.4", features = ["dev"]}

[dev-dependencies]
hex = "0.4.3"
criterion = "0.4.0"
rand = "0.8.5"

[lib]
bench = false

[[bench]]
name = "kangarootwelve"
harness = false
