[package]
name = "kangarootwelve"
version = "0.1.2"
edition = "2024"
resolver = "3"
rust-version = "1.85.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "BlaKE12: Blazing-fast KEccak on 12 rounds"
documentation = "https://github.com/itzmeanjan/kangarootwelve"
readme = "README.md"
repository = "https://github.com/itzmeanjan/kangarootwelve.git"
license = "MIT"
keywords = ["keccak", "xof", "turboshake", "kangarootwelve", "k12"]
categories = ["cryptography"]

[dependencies]
turboshake = { version = "=0.1.4", features = ["dev"] }
rayon = { version = "=1.11.0", optional = true }
num_cpus = { version = "=1.17.0", optional = true }

[dev-dependencies]
const-hex = "=1.14.1"
divan = "=0.1.21"
rand = "=0.9.2"

[features]
multi_threaded = ["dep:rayon", "dep:num_cpus"]

[[bench]]
name = "kangarootwelve"
harness = false

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
opt-level = 3
